crates/plotnik-lib/tests/02-parser/recovery_incomplete/empty_parens.txt
()
------------------ DIAGNOSTICS -------------------
error: empty `()` matches nothing
 --> query.ptk:1:1
  |
1 | ()
  | ^^
  |
help: use `(_)` to match any named node, or `_` for any node
